--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proj-alpha_recipe-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "recipeapp",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
