--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
-    "mongodb": "^3.2.7"
+    "mongodb": "^3.2.7",
+    "multer": "^1.4.1"
   }
 }
