--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/attainu-falcon/proj-alpha_recipe-app#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ember-star-rating": "^2.0.4",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "handlebars": "^4.1.2",
-    "mongodb": "^3.2.7"
+    "mongodb": "^3.2.7",
+    "rating": "^0.1.0"
   }
 }
