--- a/package.json
+++ b/package.json
@@ -4,23 +4,20 @@
   "description": "recipeapp",
   "main": "index.js",
   "scripts": {
- "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index",
     "dev": "nodemon index"
-},
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/attainu-falcon/proj-alpha_recipe-app.git"
   },
-
-
   "bugs": {
     "url": "https://github.com/attainu-falcon/proj-alpha_recipe-app/issues"
   },
-
   "homepage": "https://github.com/attainu-falcon/proj-alpha_recipe-app#readme",
-
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
@@ -28,4 +25,3 @@
     "multer": "^1.4.1"
   }
 }
-
